# openstan

./: .gitignore  404.html  AGENTS.md  BALANCE_CHART_RESUME.md  BSP_EXPLORATION_INDEX.md  BSP_INTEGRATION_SUMMARY.md  BSP_KEY_FILES_REFERENCE.md  CATEGORISATION_RESUME.md  CNAME  CONTRIBUTING.md  DECISIONS.md  LICENSE  README.md  RELEASE.md  REQUIREMENTS.md  ROADMAP.md  SECURITY.md  TESTING.md  cx_freeze_setup.py  index.html  mkdocs.yml  openstan.code-workspace  openstan.desktop  openstan.spec  pyproject.toml  search.json  sitemap.xml  test_runner.py
.github/: VIRUSTOTAL_IMPLEMENTATION.md  dependabot.yml
.github/scripts/: make_ico.py
.github/workflows/: ci.yml  cleanup-old-release-assets.yml  docs.yml  release.yml
assets/screenshots/SCREENSHOTS/: index.html
assets/stylesheets/: extra.css
codesigning/: index.html
docs/: codesigning.md  index.md  installation.md  privacy.md  quickstart.md
docs/assets/screenshots/: SCREENSHOTS.md
docs/assets/stylesheets/: extra.css
docs/overrides/: main.html
docs/overrides/partials/: logo.html
docs/screens/: about.md  admin.md  advanced-export.md  anonymise.md  export-data.md  import-results.md  import-statements.md  project-info.md  project-management.md  run-reports.md
installation/: index.html
overrides/: main.html
packaging/: openstan.desktop  post-install.sh  post-uninstall.sh  rpm-post-install.sh
packaging/macos/: entitlements.plist
packaging/windows/: license.rtf  make_installer_bitmaps.py  make_wix_fragments.py  openstan.wxs
privacy/: index.html
quickstart/: index.html
screens/about/: index.html
screens/admin/: index.html
screens/advanced-export/: index.html
screens/anonymise/: index.html
screens/export-data/: index.html
screens/import-results/: index.html
screens/import-statements/: index.html
screens/project-info/: index.html
screens/project-management/: index.html
screens/run-reports/: index.html
scripts/: test_runner.py
src/openstan/: __init__.py  __main__.py  components.py  llm_config.py  main.py  palettes.py  paths.py  shim_annotations.py  updater.py
src/openstan/cli/: __init__.py  main.py
src/openstan/data/: create_gui_db.py  gui.db
src/openstan/data/sql_files/: clear_gui_db.sql  new_project_trigger.sql  new_session_trigger.sql  new_statement_queue_trigger.sql  new_user_trigger.sql
src/openstan/gui/: __init__.py  components.py  main.py  paths.py
src/openstan/gui/data/: duck.py  gui.db  ops.py
src/openstan/gui/models/: __init__.py  event_log_model.py  examples.py  project_model.py  session_model.py  statement_queue_model.py  user_model.py
src/openstan/gui/presenters/: __init__.py  project_presenter.py  session_presenter.py  stan_presenter.py  statement_queue_presenter.py  user_presenter.py
src/openstan/gui/views/: __init__.py  content_view.py  export_view.py  footer_view.py  project_view.py  statement_queue_view.py  title.py  user_view.py
src/openstan/icons/dark/: DEPRECATED.txt
src/openstan/icons/light/: DEPRECATED.txt
src/openstan/models/: __init__.py  batch_model.py  project_model.py  report_model.py  session_model.py  statement_queue_model.py  statement_result_model.py  user_model.py
src/openstan/presenters/: __init__.py  admin_presenter.py  advanced_export_presenter.py  anonymise_presenter.py  balance_chart_presenter.py  category_presenter.py  export_data_presenter.py  project_presenter.py  run_reports_presenter.py  session_presenter.py  stan_presenter.py  statement_queue_presenter.py  statement_result_presenter.py  user_presenter.py  workers.py
src/openstan/views/: __init__.py  about_dialog.py  admin_view.py  advanced_export_view.py  anonymise_dialog.py  balance_chart_view.py  category_view.py  content_view.py  debug_info_dialog.py  export_data_view.py  export_view.py  footer_view.py  parquet_view_dialog.py  pending_batch_dialog.py  project_info_view.py  project_view.py  run_reports_view.py  statement_queue_view.py  statement_result_view.py  stub_views.py  title.py  user_view.py  welcome_view.py
tests/: conftest.py  test_bsp_contract.py  test_integration.py  test_pdf_result_serialisation.py  test_screenshots.py
tests/unit/: conftest.py  test_base_result_model.py  test_paths.py  test_project_presenter.py  test_safe_hex_id.py  test_session_model.py  test_statement_queue_model.py
