[project]
name = "openstan"
version = "0.1.7a1"
description = "Open source application for statement analysis and visualization"
readme = "README.md"
license = "GPL-3.0-or-later"
authors = [
    { name = "Jason Farrar", email = "stillwaters.technology@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "pyqt6>=6.10.2",
    "tomli-w>=1.2.0",
    "uk-bank-statement-parser==0.2.1b3",
]

[project.urls]
Homepage = "https://openstan.org"
Repository = "https://github.com/boscorat/openstan"

[project.scripts]
openstan = "openstan:main"

[build-system]
requires = ["uv_build>=0.9.17,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ghp-import>=2.1.0",
    "pyrefly>=0.50.0",
    "pytest>=9.0.0",
    "ruff>=0.14.14",
    "zensical>=0.0.24",
]
# build group: convenience for running cx_freeze_setup.py locally without
# needing to pass --with flags.  The release CI does NOT use this group —
# it injects cx-freeze and pillow ephemerally via 'uv run --with' so that
# build tools are never present in the app venv and cannot be bundled.
build = [
    "cx-freeze>=8.0.0",
    "pillow>=11.0.0",
]

# ---------------------------------------------------------------------------
# Dependency source overrides (development only)
# ---------------------------------------------------------------------------
# In production builds the packager (cx_Freeze / PyInstaller) freezes whatever
# is installed into the venv by `uv sync`.  For distribution, uk-bank-statement-
# parser is resolved from PyPI (no override needed in a clean install).
#
# The git+tag override below is intentional for *development*: it lets us work
# against a specific in-progress tag of the upstream bsp repo without waiting
# for a PyPI release.  Remove or update this entry when pinning to a released
# PyPI version for a production build.
#[tool.uv.sources]
#uk-bank-statement-parser = { git = "https://github.com/boscorat/bank_statement_parser", tag = "v0.2.1a9" }

[tool.pyrefly]
search-path = ["."]
# cx_freeze_setup.py is a build script that requires cx_Freeze, which is only
# installed in the 'build' dependency group (not 'dev').  Exclude it from
# type-checking so CI (which runs uv sync --group dev) doesn't fail on a
# missing-import error for a file that is never imported by the application.
project-excludes = ["cx_freeze_setup.py"]
